# controllers/transactions/addTransaction.js
@@ -8,13 +8,21 @@ const addTransaction = async (req, res) => {
 
   user.setBalance(type ? user.balance + amount : user.balance - amount).save();
 
-  res.status(201).json(
-    await Transaction.create({
-      ...req.body,
-      owner: _id,
-      balance: user.balance,
-    }),
-  );
+  await Transaction.create({
+    ...req.body,
+    owner: _id,
+    balance: user.balance,
+  });
+
+  const skip = 0;
+  const limit = 8;
+  const transactions = await Transaction.find(
+    { owner: _id },
+    { owner: 0 },
+    { skip, limit },
+  ).populate('owner', 'email');
+  const result = { transactions, balance: user.balance, page: 1 };
+  res.status(201).json(result);
 };
 
 module.exports = addTransaction;
