# controllers/transactions/listTransaction.js
@@ -1,8 +1,8 @@
 const { BadRequest } = require('http-errors');
-const { Transaction, User } = require('../../models');
+const { Transaction } = require('../../models');
 
 const listTransaction = async (req, res) => {
-  const { _id } = req.user;
+  const { _id, balance } = req.user;
   const { page = 1, limit = 8 } = req.query;
 
   if (page < 1 || limit < 1) throw new BadRequest('Page and limit must be positive');
@@ -11,12 +11,12 @@ const listTransaction = async (req, res) => {
 
   const skip = (page - 1) * limit;
 
-  const transactions = await Transaction.find(filter, '', { skip, limit }).populate(
+  const transactions = await Transaction.find(filter, { owner: 0 }, { skip, limit }).populate(
     'owner',
     'email',
   );
-  const user = await User.findById(_id);
-  const result = { transactions, balance: user.balance, page };
+
+  const result = { transactions, balance, page };
 
   res.json(result);
 };
